--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -64,3 +64,119 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Your code starts here! */
+
+body {
+	padding: 10px 50px;	
+}
+
+.navigation {
+	display: flex;
+	justify-content: space-between;
+}
+.navigation a{
+	color: gray;
+	text-decoration: none;
+    padding: 20px;
+}
+
+.innovate {
+	display: flex;
+	justify-content: space-evenly;
+}
+
+.CTA {
+	margin: auto 0;
+	display: flex;
+	flex-direction: column;
+}
+
+.CTA h1 {
+	font-size: 70px;
+	text-align: center;
+	animation-duration: 4s;
+	animation-name: slidein;
+	animation-name: colorChange;
+	
+}
+
+@keyframes colorChange {
+	from {
+	  color: rgb(60, 60, 255);
+	}
+  
+	to {
+	  color: black;
+	}
+  }
+
+.CTA button {
+	border: 1px solid black;
+	height: 30px;
+	width: 120px;
+	background-color: white;
+	margin-left: 5rem;
+}
+
+.innovate img {
+	padding: 10% 0%;
+	animation-duration: 4s;
+	animation-name: slidein;
+  }
+  
+  @keyframes slidein {
+	from {
+	  margin: 100%;
+	  width: 300%; 
+	}
+  
+	to {
+	  margin: 0%;
+	  width: 100%;
+	}
+  }
+
+.topContent {
+	display: flex;
+}
+
+.features {
+	padding: 2% 1% 3% 0%; 
+}
+
+.about {
+	padding: 2% 0% 3% 1% ;
+}
+
+.middleImg {
+	width: 100%;
+	height: 150px;
+}
+
+.bottomContent {
+	display: flex;
+}
+
+.services {
+	padding: 3% 0%;
+}
+.product {
+	padding: 3% 4% 3% 4%;
+}
+
+.vision {
+	padding: 3% 0%;
+}
+
+.contact {
+	padding-top: 2%;
+}
+
+.contactPara {
+	padding: 1% 0% 0% 0%;
+}
+
+.copyright {
+	margin: 0 auto;
+	padding: 5%;
+	text-align: center;
+}
